fix numeric align

--- a/packages/ag-grid-theme/css/_salt-ag-theme-mixin.scss
+++ b/packages/ag-grid-theme/css/_salt-ag-theme-mixin.scss
@@ -189,6 +189,7 @@
   .ag-cell.editable-numeric-cell {
     border: solid 1px var(--agGrid-cell-borderColor-editable);
     text-align: right;
+    justify-content: flex-end;
   }
 
   .ag-cell.editable-numeric-cell.ag-cell-focus:focus:before {
